Adding roadmap stuff so we don't get lost

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 							- Unlocking achievements, making git a bit more fun
 							- Context hunting / Isolate and Triage issues
 							- Mastering branches
-							- Audit your work interactively
+							- Audit work interactively
 							- Manage merge conflicts like a pro
 						</script>
 					</section>
@@ -291,6 +291,20 @@
 							height="500px"
 						>
 					</section>
+					<section>
+						<h3>Tools suited to personal workflow</h3>
+						<div data-markdown>
+							- Personal workflows...
+								- **Isolate and Triage: Context hunting** <-- you are here
+								- Work: Mastering branches
+								- Update, Test: Audit work interactively
+								- Share: Manage merge conflicts like a pro
+						</div>
+						<img
+							src="images/individual-workflow.svg"
+							height="500px"
+						>
+					</section>
 					<section data-markdown> <!-- Context hunting: Log Bisect, Blame, Pickaxe -->
 						<script type="text/template">
 							### Context hunting / Isolate, Triage
@@ -304,20 +318,24 @@
 							3. Get help if you get stuck, seek out a human
 							----------------------------------------
 
-							* Log - Show commit logs
-							* Bisect - binary search for change that introduced a bug
-							* Blame - revision and author last modified for lines of a file
-							* Pickaxe - Search commit diffs for changes
+							- Personal workflows...
+								- Isolate and Triage: Context hunting
+									* Log - Show commit logs
+									* Bisect - binary search for bugs
+									* Blame - revision and author for lines of a file
+									* Pickaxe - Search commit diffs for changes
 						</script>
 					</section>
 					<section> <!-- Git log -->
 						<div data-markdown>
 							<script type="text/template">
 								### Context hunting / Isolate, Triage
-								* Log <-- you are here
-								* Bisect
-								* Blame
-								* Pickaxe
+								- Personal workflows...
+									- Isolate and Triage: Context hunting
+										* Log <-- you are here
+										* Bisect
+										* Blame
+										* Pickaxe
 								----------------------------------------
 							</script>
 						</div>
@@ -363,10 +381,12 @@
 						<div data-markdown>
 							<script type="text/template">
 								### Context hunting / Isolate, Triage
-								* Log
-								* Bisect <-- you are here
-								* Blame
-								* Pickaxe
+								- Personal workflows...
+									- Isolate and Triage: Context hunting
+										* Log
+										* Bisect <-- you are here
+										* Blame
+										* Pickaxe
 								----------------------------------------
 							</script>
 						</div>
@@ -408,10 +428,12 @@
 					<section data-markdown> <!-- Git blame -->
 						<script type="text/template">
 							### Context hunting / Isolate, Triage
-							* Log
-							* Bisect
-							* Blame <-- you are here
-							* Pickaxe
+							- Personal workflows...
+								- Isolate and Triage: Context hunting
+									* Log
+									* Bisect
+									* Blame <-- you are here
+									* Pickaxe
 							----------------------------------------
 						</script>
 					</section>
@@ -419,13 +441,29 @@
 						<div data-markdown>
 							<script type="text/template">
 								### Context hunting / Isolate, Triage
-								* Log
-								* Bisect
-								* Blame
-								* Pickaxe <-- you are here
+								- Personal workflows...
+									- Isolate and Triage: Context hunting
+										* Log
+										* Bisect
+										* Blame
+										* Pickaxe <-- you are here
 								----------------------------------------
 							</script>
 						</div>
+					</section>
+					<section>
+						<h3>Tools suited to personal workflow</h3>
+						<div data-markdown>
+							- Personal workflows...
+								- Isolate and Triage: Context hunting
+								- **Work: Mastering branches** <-- you are here
+								- Update, Test: Audit work interactively
+								- Share: Manage merge conflicts like a pro
+						</div>
+						<img
+							src="images/individual-workflow.svg"
+							height="500px"
+						>
 					</section>
 					<section data-markdown>
 						<script type="text/template">
@@ -444,11 +482,39 @@
 							TODO merge histories
 						</script>
 					</section>
+					<section>
+						<h3>Tools suited to personal workflow</h3>
+						<div data-markdown>
+							- Personal workflows...
+								- Isolate and Triage: Context hunting
+								- Work: Mastering branches
+								- **Update, Test: Audit work interactively** <-- you are here
+								- Share: Manage merge conflicts like a pro
+						</div>
+						<img
+							src="images/individual-workflow.svg"
+							height="500px"
+						>
+					</section>
 					<section data-markdown>
 						<script type="text/template">
-							### Audit your work interactively
+							### Audit work interactively
 							Audit your work interactively with your staging area
 						</script>
+					</section>
+					<section>
+						<h3>Tools suited to personal workflow</h3>
+						<div data-markdown>
+							- Personal workflows...
+								- Isolate and Triage: Context hunting
+								- Work: Mastering branches
+								- Update, Test: Audit work interactively
+								- **Share: Manage merge conflicts like a pro** <-- you are here
+						</div>
+						<img
+							src="images/individual-workflow.svg"
+							height="500px"
+						>
 					</section>
 					<section data-markdown>
 						<script type="text/template">
