Added images to release processes

--- a/index.html
+++ b/index.html
@@ -908,6 +908,9 @@
 							* Simple
 							* Track changes, find bugs and release when you can
 							* Easy to bring new devs on board
+
+							![](images/basic-branching-1.png)
+							![](images/basic-branching-2.png)
 						</div>
 					</section>
 					<section>
@@ -916,6 +919,8 @@
 							* Fairly simple
 							* Work on multiple releases at the same time
 							* Can work on upstream while downstream is still going
+
+							![](images/release-branches.png)
 						</div>
 					</section>
 					<section>
@@ -925,6 +930,20 @@
 							* Features are octo-merged into a release candidate
 							* Need to track production somehow
 							* Cannot release 'backwards'
+
+							![](images/feature-releases-1.png)
+						</div>
+					</section>
+					<section>
+						<div data-markdown>
+							### Feature releases... omg
+							![](images/feature-releases-2.png)
+						</div>
+					</section>
+					<section>
+						<div data-markdown>
+							### Feature releases... more woah
+							![](images/feature-releases-3.png)
 						</div>
 					</section>
 					<section>
@@ -933,7 +952,13 @@
 							* Difficulty is abstracted to the application
 							* Modules of application can be worked on at the same time
 							* Release would package together multiple pieces of work
+
+							![](images/basic-branching-2.png)
+							![](images/release-branches.png)
 						</div>
+					</section>
+					<section>
+						<h1>Each has it's costs, choose the one that works best</h1>
 					</section>
 				</section>
 
