Final touches -- further reading

--- a/index.html
+++ b/index.html
@@ -970,16 +970,19 @@
 							- An ebook with plenty of gitty goodness
 						</li>
 						<li>
-							<a href="http://git-scm.com/book/en/Git-on-the-Server-Git-Daemon">Git Daemon</a>
-							- More on setting up the git daemon
+							Schwern's talk:
+							<a href="http://www.youtube.com/watch?v=1ffBJ4sVUb4">Git for ages 4 and up</a>
 						</li>
-						<li>Baz</li>
+						<li>
+							man git-workflows
+						</li>
 					</ul>
           <hr>
 					<h2>Attribution</h2>
 					<ul>
 						<li><a href="http://git-scm.com">git-scm.com</a> for some images</li>
-						<li><a href="https://github.com/hakimel/reveal.js">reveal.js</a> for slides</li>
+						<li><a href="http://devopsreactions.tumblr.com/post/50800607139">devops reactions</a> for awesome animated gifs</li>
+						<li><a href="https://github.com/hakimel/reveal.js">reveal.js</a> for unbad slides</li>
 					</ul>
 				</section>
 
