--- a/index.html
+++ b/index.html
@@ -597,6 +597,14 @@
 							Whiteboard time!
 						</div>
 					</section>
+					<section data-background-image="images/oops.gif">
+						<div data-markdown>
+							```
+							# NOES!! Undo!!
+							git reflog
+							```
+						</div>
+					</section>
 					<section>
 						<h3>Mastering branches: Headless state</h3>
 						<div data-markdown>
@@ -752,6 +760,8 @@
 							- Working with people who don't enjoy source control
 							- Clean history, rebase verses merge
 						</script>
+					</section>
+					<section data-background-image="images/share.gif">
 					</section>
 					<section>
 						<div data-markdown>
