--- a/index.html
+++ b/index.html
@@ -840,6 +840,9 @@
 						</div>
 					</section>
 					<section>
+            <img src="images/under-attack.gif">
+					</section>
+					<section>
 						<div data-markdown>
 							### Clean history, rebase verses merge
 							* When to merge: If you've pushed it, you can't change things without pain.
