--- a/index.html
+++ b/index.html
@@ -761,7 +761,8 @@
 							- Clean history, rebase verses merge
 						</script>
 					</section>
-					<section data-background-image="images/share.gif">
+					<section>
+						<img src="images/share.gif">
 					</section>
 					<section>
 						<div data-markdown>
