Update to alias one more time

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
 					<small>
 						Slides by <a href="http://matthew.geek.nz">Matthew B. Gray</a>
-						/ <a href="https://twitter.com/jsflimflam">@jsflimflam</a>
+						/ <a href="https://twitter.com/theflimflam">@theflimflam</a>
 					</small>
 
 					<hr>
@@ -268,7 +268,7 @@
 						<div class="fragment current-visible">
 							<p>If there's more interest...<p>
 							<p><a href="pages/git-achievements/index.html" target="_blank">
-								--> @jsflimflam's achievements -->
+								--> @theflimflam's achievements -->
 							</a></p>
 						</div>
 					</section>
@@ -472,7 +472,7 @@
 							3. Use bisect with v1 and v2 tags as good/bad commits
 							4. find the commit that broke the page
 							```
-							git clone https://github.com/jsflimflam/jabberwocky
+							git clone https://github.com/theflimflam/jabberwocky
 							git fetch --tags
 							git log -p
 							git log --stat
@@ -1005,7 +1005,7 @@
 
 				<section data-background-image="images/end.gif">
 					<h1 style="text-transform:none">
-						Thanks! - <a href="https://twitter.com/jsflimflam">@jsflimflam</a>
+						Thanks! - <a href="https://twitter.com/theflimflam">@theflimflam</a>
 					</h1>
 				</section>
 			</div>
