Last slides refer to github pages - issue #1

--- a/index.html
+++ b/index.html
@@ -1003,10 +1003,25 @@
 					</ul>
 				</section>
 
-				<section data-background-image="images/end.gif">
-					<h1 style="text-transform:none">
-						Thanks! - <a href="https://twitter.com/theflimflam">@theflimflam</a>
-					</h1>
+				<section data-markdown>
+					## Course Information
+					Slides can be found on
+
+					[github.com/catalyst-training/git-advanced](
+						https://github.com/catalyst-training/git-advanced
+					)
+
+					![qr for quick access](images/github-qr-link.png)
+
+					Feedback? Corrections? Questions?
+
+					Please leave an issue against the course github page.
+				</section>
+
+				<section data-markdown>
+					Big finish
+
+					![Boom](images/big-end.gif)
 				</section>
 			</div>
 
