--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
 		<link rel="stylesheet" href="css/reveal.min.css">
-		<link rel="stylesheet" href="css/theme/solarized.css" id="theme">
+		<!--<link rel="stylesheet" href="css/theme/solarized.css" id="theme">-->
+		<link rel="stylesheet" href="css/theme/catalyst.css" id="theme">
 
 		<!-- For syntax highlighting -->
 		<link rel="stylesheet" href="lib/css/zenburn.css">
@@ -42,28 +43,15 @@
 			<div class="slides">
 				<!-- Cover slide -->
 				<section>
-					<h1>Advanced Git</h1>
-					<h2>Workflows for Developers</h2>
-
-					<small>
+					<h1 class="catalyst-logo">Catalyst</h1>
+					<h3>Advanced Git</h3>
+					<h4>Workflows for Developers</h4>
+					<p class="small-text">
+					</p>
+					<p class="small-text">
 						Slides by <a href="http://matthew.geek.nz">Matthew B. Gray</a>
 						/ <a href="https://twitter.com/theflimflam">@theflimflam</a>
-					</small>
-
-					<hr>
-					<h3>Special thanks to</h3>
-					<ul>
-						<li>Mike O' – For approving this course</li>
-						<li>Alison Aldred – For being generally awesome</li>
-						<li>Evan Giles – Inspiration and advice</li>
-					</ul>
-
-					<hr>
-					<small>
-						<!-- Well lit room? Light theme -->
-						Theme: <a href="?theme=moon">Dark</a>
-							/ <a href="?theme=solarized">Light</a>
-					</small>
+					</p>
 
 					<aside class="notes">
 						<ul>
@@ -75,19 +63,29 @@
 					</aside>
 				</section>
 
+				<section>
+					<h2>Special thanks to</h2>
+					<ul>
+						<li>Mike O' – For approving this course</li>
+						<li>Alison Aldred – Organise all the things</li>
+						<li>Evan Giles – Inspiration and advice</li>
+						<li>Robert Higgins – Standardisation and profesionalism</li>
+					</ul>
+				</section>
+
+				<section data-background-image="images/swag.gif"></section>
+
 				<!-- Course Overview -->
-				<section data-markdown>
-					<script type="text/template">
+				<section>
+					<div data-markdown>
 						## Course Overview
 						--------------------------------------------------------------------------------
 						* Getting Started
 						* Personal workflows
 						* Team workflows
 						* Client workflows
-					</script>
+					</div>
 				</section>
-
-				<section data-background-image="images/swag.gif"></section>
 
 				<!-- Setup your git fu, review some basic stuff -->
 				<section>
@@ -1023,6 +1021,22 @@
 
 					![Boom](images/big-end.gif)
 				</section>
+			</div>
+
+			<div class="footer">
+				<div class="scarf">
+					<div class="scarf-orange"></div>
+					<div class="scarf-yellow"></div>
+					<div class="scarf-blue"></div>
+					<div class="scarf-green"></div>
+				</div>
+				<div class="footer-inner">
+					<div>
+						<!-- NOTE: use only one of these. open-source-technologists is the standard -->
+						<p class="open-source-technologists">open source technologists</p>
+						<!-- <p class="freedom-to-innovate">freedom to innovate</p> -->
+					</div>
+				</div>
 			</div>
 
 		</div>
