Add "parts {1..3}" to broad sections, add titles

--- a/index.html
+++ b/index.html
@@ -76,33 +76,28 @@
 				<section data-background-image="images/swag.gif"></section>
 
 				<!-- Course Overview -->
-				<section>
-					<div data-markdown>
-						## Course Overview
-						--------------------------------------------------------------------------------
-						* Getting Started
-						* Personal workflows
-						* Team workflows
-						* Client workflows
-					</div>
+				<section data-markdown>
+					## Course Overview
+					--------------------------------------------------------------------------------
+					* Part 1: Getting Started
+					* Part 2: Personal workflows
+					* Part 3: Team workflows
+					* Part 4: Releases and Client workflows
 				</section>
 
 				<!-- Setup your git fu, review some basic stuff -->
 				<section>
 					<section data-markdown>
-						<!--data-background-transition="slide"-->
-						<script type="text/template">
-							* **Getting Started** <-- you are here
-							* Personal workflows
-							* Team workflows
-							* Client workflows
-							--------------------------------------------------------------------------------
-							## Overview: Getting started
-							- Basic config for these machines
-							- Good config defaults
-							- Quick review of basic git
-							- Unlocking achievements, making git a bit more fun
-						</script>
+						### Part 1: Getting started
+						* Part 2: Personal workflows
+						* Part 3: Team workflows
+						* Part 4: Releases and Client workflows
+						--------------------------------------------------------------------------------
+						### Objectives
+						- Basic config for these machines
+						- Good config defaults
+						- Quick review of basic git
+						- Unlocking achievements, making git a bit more fun
 					</section>
 					<section data-markdown>
 						<script type="text/template">
@@ -255,12 +250,12 @@
 				<!-- Personal workflows -->
 				<section>
 					<section data-markdown>
-						* Getting Started
-						* **Personal workflows** <-- you are here
-						* Team workflows
-						* Client workflows
+						* Part 1: Getting Started &#10004;
+						### Part 2: Personal workflows
+						* Part 3: Team workflows
+						* Part 4: Releases and Client workflows
 						--------------------------------------------------------------------------------
-						## Overview: Personal workflows
+						### Objectives
 						- Context hunting / Isolate and Triage issues
 						- Mastering branches
 						- Audit work interactively
@@ -771,18 +766,17 @@
 
 				<section>
 					<section data-markdown>
-						<script type="text/template">
-							* Getting Started
-							* Personal workflows
-							* **Team workflows** <-- you are here
-							* Client workflows
-							--------------------------------------------------------------------------------
-							## Overview: Team workflows
-							- Quickly setup local, network accessible repos
-							- Working with people who don't enjoy source control
-							- Clean history, rebase verses merge
-						</script>
+						* Part 1: Getting Started &#10004;
+						* Part 2: Personal workflows &#10004;
+						### Part 3: Team workflows
+						* Part 4: Releases and Client workflows
+						--------------------------------------------------------------------------------
+						### Objectives
+						- Quickly setup local, network accessible repos
+						- Working with people who don't enjoy source control
+						- Clean history, rebase verses merge
 					</section>
+
 					<section>
 						<img src="images/share.gif">
 					</section>
@@ -893,18 +887,17 @@
 				</section>
 
 				<section>
-					<section>
-						<div data-markdown>
-							* Getting Started
-							* Personal workflows
-							* Team workflows
-							* **Client workflows** <-- you are here
-							--------------------------------------------------------------------------------
-							## Overview: Client workflows
-							- Strategies for dealing with client requirements
-							- Strategies for database patching on branches
-						</div>
+					<section data-markdown>
+						* Part 1: Getting Started &#10004;
+						* Part 2: Personal workflows &#10004;
+						* Part 3: Team workflows &#10004;
+						### Part 4: Release Management
+						--------------------------------------------------------------------------------
+						### Objectives
+						- Strategies for dealing with release requirements
+						- Strategies for database patching on branches
 					</section>
+
 					<section>
 						<div data-markdown>
 							### Database patching on branches
