Update progress indicators - issue #3

--- a/index.html
+++ b/index.html
@@ -243,8 +243,17 @@
 						<hr>
 					</section>
 
-					<section data-background-image="images/dazzle.gif"></section>
+					<section data-markdown>
+						### Part 1: Getting started
+						### [COMPLETE]
+						* Objectives
+							- Basic config for these machines &#10004;
+							- Good config defaults &#10004;
+							- Quick review of basic git &#10004;
+							- Unlocking achievements, making git a bit more fun &#10004;
+					</section>
 
+					<section data-background-image="images/dazzle.gif"></section>
 				</section>
 
 				<!-- Personal workflows -->
@@ -262,15 +271,13 @@
 						- Manage merge conflicts like a pro
 					</section>
 
-					<section>
-						<h3>Tools suited to personal workflow</h3>
-						<div data-markdown>
-							- Personal workflows...
-								- **Isolate and Triage: Context hunting** <-- you are here
-								- Work: Mastering branches
-								- Update, Test: Audit work interactively
-								- Share: Manage merge conflicts like a pro
-						</div>
+					<section data-markdown>
+						### Part 2: Personal workflow
+						* Objectives
+							- __Isolate and Triage: Context hunting <-- you are here__
+							- Work: Mastering branches
+							- Update, Test: Audit work interactively
+							- Share: Manage merge conflicts like a pro
 					</section>
 
 					<section>
@@ -291,16 +298,16 @@
 					</section>
 
 					<section data-markdown>
-							### Context hunting / Isolate, Triage
-							- Personal workflows...
-								- Isolate and Triage: Context hunting
-									* __Log - Show commit logs &lt;-- you are here!__
-									* Bisect - binary search for bugs
-									* Blame - revision and author for lines of a file
-									* Pickaxe - Search commit diffs for changes
-								- Work: Mastering branches
-								- Update, Test: Audit work interactively
-								- Share: Manage merge conflicts like a pro
+						### Part 2: Personal workflow
+						* Objectives
+							- Isolate and Triage: Context hunting
+								* __Log - Show commit logs &lt;-- you are here!__
+								* Bisect - binary search for bugs
+								* Blame - revision and author for lines of a file
+								* Pickaxe - Search commit diffs for changes
+							- Work: Mastering branches
+							- Update, Test: Audit work interactively
+							- Share: Manage merge conflicts like a pro
 					</section>
 
 					<section data-markdown>
@@ -338,10 +345,10 @@
 
 					<!-- Git bisect -->
 					<section data-markdown>
-						### Context hunting / Isolate, Triage
-						- Personal workflows...
+						### Part 2: Personal workflow
+						* Objectives
 							- Isolate and Triage: Context hunting
-								* Log - Show commit logs
+								* Log - Show commit logs &#10004;
 								* __Bisect - binary search for bugs &lt;-- you are here!__
 								* Blame - revision and author for lines of a file
 								* Pickaxe - Search commit diffs for changes
@@ -382,7 +389,7 @@
 						git bisect skip
 
 						# or save where you're up to, and come back later
-						git bisect log > bisect.log
+						git bisect log &gt; bisect.log
 						# ... time passes
 						git bisect reset
 						git bisect reply bisect.log
@@ -390,11 +397,11 @@
 					</section>
 
 					<section data-markdown>
-						### Context hunting / Isolate, Triage
-						- Personal workflows...
+						### Part 2: Personal workflow
+						* Objectives
 							- Isolate and Triage: Context hunting
-								* Log - Show commit logs
-								* Bisect - binary search for bugs
+								* Log - Show commit logs &#10004;
+								* Bisect - binary search for bugs &#10004;
 								* __Blame - revision and author for lines of a file &lt;-- you are here!__
 								* Pickaxe - Search commit diffs for changes
 							- Work: Mastering branches
@@ -429,12 +436,12 @@
 
 					<!-- Git blame -->
 					<section data-markdown>
-						### Context hunting / Isolate, Triage
-						- Personal workflows...
+						### Part 2: Personal workflow
+						* Objectives
 							- Isolate and Triage: Context hunting
-								* Log - Show commit logs
-								* Bisect - binary search for bugs
-								* Blame - revision and author for lines of a file
+								* Log - Show commit logs &#10004;
+								* Bisect - binary search for bugs &#10004;
+								* Blame - revision and author for lines of a file &#10004;
 								* __Pickaxe - Search commit diffs for changes &lt;-- you are here!__
 							- Work: Mastering branches
 							- Update, Test: Audit work interactively
@@ -509,15 +516,14 @@
 							```
 						</div>
 					</section>
-					<section>
-						<h3>Tools suited to personal workflow</h3>
-						<div data-markdown>
-							- Personal workflows...
-								- Isolate and Triage: Context hunting
-								- __Work: Mastering branches &lt;-- you are here__
-								- Update, Test: Audit work interactively
-								- Share: Manage merge conflicts like a pro
-						</div>
+
+					<section data-markdown>
+						### Part 2: Personal workflow
+						* Objectives
+							- Isolate and Triage: Context hunting &#10004;
+							- __Work: Mastering branches &lt;-- you are here!__
+							- Update, Test: Audit work interactively
+							- Share: Manage merge conflicts like a pro
 					</section>
 
 					<section>
@@ -673,15 +679,13 @@
 						```
 					</section>
 
-					<section>
-						<h3>Tools suited to personal workflow</h3>
-						<div data-markdown>
-							- Personal workflows...
-								- Isolate and Triage: Context hunting
-								- Work: Mastering branches
-								- **Update, Test: Audit work interactively** <-- you are here
-								- Share: Manage merge conflicts like a pro
-						</div>
+					<section data-markdown>
+						### Part 2: Personal workflow
+						* Objectives
+							- Isolate and Triage: Context hunting &#10004;
+							- Work: Mastering branches &#10004;
+							- __Update, Test: Audit work interactively &lt;-- you are here!__
+							- Share: Manage merge conflicts like a pro
 					</section>
 
 					<section>
@@ -716,15 +720,13 @@
 						</div>
 					</section>
 
-					<section>
-						<h3>Tools suited to personal workflow</h3>
-						<div data-markdown>
-							- Personal workflows...
-								- Isolate and Triage: Context hunting
-								- Work: Mastering branches
-								- Update, Test: Audit work interactively
-								- **Share: Manage merge conflicts like a pro** <-- you are here
-						</div>
+					<section data-markdown>
+						### Part 2: Personal workflow
+						* Objectives
+							- Isolate and Triage: Context hunting &#10004;
+							- Work: Mastering branches &#10004;
+							- Update, Test: Audit work interactively &#10004;
+							- __Share: Manage merge conflicts like a pro &lt;-- you are here!__
 					</section>
 
 					<section>
@@ -759,6 +761,15 @@
 							git merge $ref
 							```
 						</div>
+					</section>
+
+					<section data-markdown>
+						### Part 2: Personal workflow [COMPLETE]
+						* Objectives
+							- Isolate and Triage: Context hunting &#10004;
+							- Work: Mastering branches &#10004;
+							- Update, Test: Audit work interactively &#10004;
+							- Share: Manage merge conflicts like a pro &#10004;
 					</section>
 
 					<section data-background-image="images/3-steps.gif"></section>
@@ -881,9 +892,16 @@
 							```
 						</div>
 					</section>
-					<section data-background-image="images/git-to-svn-users.gif">
-						<h3>How an svn user sees git workflow</h3>
+
+					<section data-markdown>
+						### Part 3: Team workflows [COMPLETE]
+						- Objectives
+							- Quickly setup local, network accessible repos &#10004;
+							- Working with people who don't enjoy source control &#10004;
+							- Clean history, rebase verses merge &#10004;
 					</section>
+
+					<section data-background-image="images/git-to-svn-users.gif"></section>
 				</section>
 
 				<section>
@@ -929,8 +947,9 @@
 						</div>
 					</section>
 					<section data-background-image="images/personal-workflows.gif">
-						<h3>Release all the things!</h3>
+						<h3 style="color:white">Release all the things!</h3>
 					</section>
+
 					<section>
 						<div data-markdown>
 							### Client requirements: Linear history
